Fixed flex on smaller screen

--- a/exercise-04/exercise-04_demo/style.css
+++ b/exercise-04/exercise-04_demo/style.css
@@ -113,6 +113,7 @@ h1 {
  .articlebox {
     padding: 3%;
     margin-top: 5%;
+    flex: 1;
 
  }
 
